Radically simplify app by bundling chaplin views.

--- a/app/assets/index.html
+++ b/app/assets/index.html
@@ -11,11 +11,7 @@
   <link rel="stylesheet" href="stylesheets/app.css">
   <script src="javascripts/vendor.js"></script>
   <script src="javascripts/app.js"></script>
-  <script>
-    $(function() {
-      require('application').initialize();
-    });
-  </script>
+  <script>require('initialize');</script>
 </head>
 <body>
   <nav class="navbar navbar-fixed-top" id="navigation-container">
