--- a/app/assets/index.html
+++ b/app/assets/index.html
@@ -6,7 +6,7 @@
 <head>
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-  <title>Example brunch application</title>
+  <title>Tweet your brunch</title>
   <meta name="viewport" content="width=device-width,initial-scale=1">
   <link rel="stylesheet" href="stylesheets/app.css">
   <script src="javascripts/vendor.js"></script>
@@ -14,8 +14,7 @@
   <script>require('initialize');</script>
 </head>
 <body>
-  <nav class="navbar navbar-fixed-top" id="navigation-container">
-  </nav>
+  <nav class="navbar navbar-fixed-top" id="navigation-container"></nav>
   
   <div class="container outer-container">
     <div id="page-container" class="row">
@@ -24,7 +23,6 @@
       <div class="module span7 main-content" id="content-container">
       </div>
     </div>
-    <div id="fb-root"></div>
   </div>
 </body>
 </html>
